tdf#130449 allow gdk_window_move_to_rect to try GDK_ANCHOR_SLIDE

as well as GDK_ANCHOR_FLIP if the window placement will put part of the
floating window off screen

Change-Id: I6b76df371048865cb4b1befea5ba34b38336944e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96482
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>